<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion_monnaie"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entrez_valeur"
        android:inputType="numberDecimal"
        android:layout_below="@id/textView"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioDinarToEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinar_to_euro"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioEuroToDinar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_to_dinar"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertir"
        android:layout_below="@id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultat"
        android:textSize="18sp"
        android:layout_below="@id/buttonConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>